# drivers-video_capture_vlc

./: CMakeLists.txt  VlcCapture.cpp  VlcCapture.h  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  VlcCapture.cpp  VlcCapture.h  stream.cpp  video_capture_vlc.pc.in
test/: CMakeLists.txt  test_Dummy.cpp
